Исправлены ошибки в тексте программы.

--- a/Form2.resx
+++ b/Form2.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label2.Text" xml:space="preserve">
-    <value>Данная программа была созданна разработчиком под именем @kadyrovseydamet. Она может определять, какой фильм получил Оскар в Ваш год рождения. Внимание! Если в Ваш год рождения, никакой фильм не получал Оскара, то будут показаны результаты с крайней прошлой номинации! Данную программу можно улучшать, переписывать. Но присваивать себе или иному человеку, продавать - запрещено! Все права защищены.</value>
+    <value>Данная программа была созданна разработчиком под именем @kadyrovseydamet. Она может определять какой фильм получил Оскар в Ваш год рождения. Внимание! Если в Ваш год рождения, никакой фильм не получал Оскара, то будут показаны результаты с крайней прошлой номинации! Данную программу можно улучшать, переписывать. Но присваивать себе или иному человеку, продавать - запрещено! Все права защищены.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
